[project]
name = "llm-head"
version = "0.1.0"
description = "Allow forking and backtracking."
readme = "README.md"
authors = [{name = "Fergus Fettes"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = ["llm"]

[project.urls]
Homepage = "https://github.com/fergusfettes/llm-head"
Issues = "https://github.com/fergusfettes/llm-head/issues"

[project.entry-points.llm]
cmd = "llm_head"

[project.optional-dependencies]
test = ["pytest"]
